--- a/share/html/50x.html
+++ b/share/html/50x.html
@@ -1,1 +1,14 @@
-sorry 50x
+<!doctype html>
+<meta charset=utf-8>
+<title>i fucked up :(</title>
+<style>
+body {
+     text-align: center;
+     background: #ffff00;
+     background: color(display-p3 1 0.242 0.314 / 1);
+     font-family: futura, "jost*", sans-serif;
+}
+</style>
+<h1>sorry i fucked up :c
+
+<p>it's some kind of 500 error, sorry
